# VoiceControl

./: .gitignore  JustFile  LICENSE  README.md  config.yaml  control.py  initialisation.py  old_initialisation.py  pyproject.toml  setup.py  test.py
Application/: aggregator.py  config.yaml  log_config.toml  pyproject.toml
HardwareApplication/: .gitignore  hardware.py  hello.py  index.html  log_config.toml  pyproject.toml
UI/: README.md  pyproject.toml
UI/new_interface/: index.html  new_index.html
UI/old_interface/scripts/: app.js
UI/web-dictaphone-main/media/web-dictaphone/scripts/: app.js
browser_control/: browser.py  models.py  pyproject.toml
logging_server/: config.toml  logger.py  pyproject.toml
mk_docs/: README.md  hello.py  pyproject.toml
mk_docs/voice_control_mk_docs/: mkdocs.yml
mk_docs/voice_control_mk_docs/docs/: about.md  architecture.md  index.md  introduction.md  setup.md
transcriber/: API_calls.py  README.md  commands.yaml  models.py  pyproject.toml  transcriber.py
