[project]
name = "browser-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "playwright>=1.50.0",
    "ruff>=0.9.7",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120
exclude = [
    "build",
    "dist",
    "venv",
    ".tox",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".vscode",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".idea",
]

[tool.ruff.lint]
select = ["ALL"]
