[project]
name = "transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi>=0.115.8",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
url = "https://github.com/openai/whisper"
